# deltaba

./: README.md
main/: BALProblem.cpp  CMakeLists.txt  deltaba.cpp  functions.cpp  kdtree.cpp  readme   temp.pcd  writeplywj.cpp
main/include/: BALProblem.h  funcs.h
pre/: 3dpos.txt  test.awk
pre/Rock/: TheRock2.wrl
pre/SIFTflow/: demo.m
pre/SIFTflow/mexDenseSIFT/: mexDenseSIFT.mexa64
pre/SIFTflow/mexDiscreteFlow/: mexDiscreteFlow.mexa64
pre/calib/: readme
pre/face-release1.0-basic/: facedemo.m  fconv.mexa64  fconv.mexw64  features.mexw64  reduce.mexw64  resize.mexw64  shiftdt.mexw64
pre/local/: readme
pre/local/include/: SoWinEnterScope.h  SoWinLeaveScope.h
pre/local/include/Inventor/: Sb.h  SbBSPTree.h  SbBasic.h  SbBox.h  SbBox2d.h  SbBox2f.h  SbBox2s.h  SbBox3f.h  SbBox3s.h  SbClip.h  SbColor.h  SbColor4f.h  SbCylinder.h  SbDPLine.h  SbDPLinear.h  SbDPMatrix.h  SbDPPlane.h  SbDPRotation.h  SbDPViewVolume.h  SbDict.h  SbHeap.h  SbImage.h  SbLine.h  SbLinear.h  SbMatrix.h  SbName.h  SbOctTree.h  SbPList.h  SbPlane.h  SbRotation.h  SbSphere.h  SbString.h  SbTesselator.h  SbTime.h  SbVec2d.h  SbVec2f.h  (+23 more)
pre/local/lib/: libCoin.la
pre/local/lib64/: libosg.so.2.8.1  libosgAnimation.so.2.8.1  libosgGA.so.2.8.1  libosgManipulator.so.55  libosgShadow.so.55  libosgSim.so.55  libosgTerrain.so.55  libosgText.so.55  libosgViewer.so.55
pre/renderer/: PreCeres.mat  ldlibMatlab.bash  ldlibMatlab.bash~  step1.m  step2.m  step3.m
pre/renderer/include/: Engine.h  EngineOSG.cpp  EngineOSG.h  compile_renderer.m  depth.cpp  depth.h  renderer.cpp
test/: main.cpp
(+622 files in other folders)
